Control de Acceso Concluido

--- a/src/index.css
+++ b/src/index.css
@@ -279,3 +279,7 @@ body {
   position: absolute !important;
   left: -9999px !important;
 }
+
+.chrome-extension-warning {
+  display: none !important;
+}
